--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 authors = ["Yoshihito Hirakawa <hirakawa.yoshihito@classmethod.jp>"]
 
 [dependencies]
-clap = "2.31"
+clap = { version = "4.4", features = ["derive"] }
 failure = "0.1"
 qrcode = "0.5"
 image = "0.17"
