--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,6 @@ authors = ["Yoshihito Hirakawa <hirakawa.yoshihito@classmethod.jp>"]
 
 [dependencies]
 clap = { version = "4.4", features = ["derive"] }
-failure = "0.1"
-qrcode = "0.12"
 image = "0.23"
+qrcode = "0.12"
+thiserror= "1.0"
